test/Fail/Issue437.err
Issue437.agda:14.8-11: error: [ShouldBePi]
F _b_7 should be a function type, but it isn't
when checking that false is a valid argument to a function of type
F _b_7
